fix filter overflow

--- a/src/style/catalog.scss
+++ b/src/style/catalog.scss
@@ -660,6 +660,7 @@
 .afb-checkboxes{
     margin: 20px 0;
     max-height: 260px;
+    overflow: hidden;
     .count{
         position: absolute;
         top: 0;
